# nnUNetDemo

./: .gitignore  README.md  pyproject.toml
nnunetdemo/prepare_data/: prepareNIFTI.py
nnunetdemo/setup_scripts/: fix_amos_dataset.py  setup_AMOS22.py  setup_FLARE2022.py
