[project]
name = "nnunetdemo"
version = "0.1.0"
description = "Quick Demonstration of training nnUNet using publicly available data"
authors = [
    {name = "Michael Bending",email = "michael.a.bending@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
