[project]
name = "nnunetdemo"
version = "0.1.0"
description = "Quick Demonstration of training nnUNet using publicly available data"
authors = [
    {name = "Michael Bending",email = "michael.a.bending@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "nibabel (>=5.4.2,<6.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "click (>=8.3.2,<9.0.0)",
    "torch (>=2.11.0,<3.0.0)",
    "nnunetv2 (>=2.7.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=1.20.1,<2.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "nibabel-stubs (>=0.1.0,<0.2.0)"
]

[python.scripts]
setup_AMOS22 = "nnunetdemo.setup_scripts.setupAMOS22:run_setup_amos22"
sort_AMOS22 =  "nnunetdemo.setup_scripts.setupAMOS22:run_sort_amos22"